# Proto-Time

./: .gitignore  CMakeLists.txt  CPU.hpp  IMicrocode.cpp  IOpcode.cpp  MemoryMap.hpp  MemoryPool.hpp  README.md  common_microcode.hpp  cpp_core_guidelines_review.md  cpu.hpp  emulator.cpp  executionBlock.cpp  inst_cycle.hpp  memory_pool.hpp  opcode.hpp
cores/: gameboy.cpp  gameboy.hpp  gameboy_opcodes.cpp
cores/gameboy/: GameBoyMachine.hpp  gameboy.cpp  gameboy.hpp  gameboy_opcodes.cpp  gameboy_plugin_runtime.hpp  hardware_registers.hpp  register_id.hpp
cores/gameboy/cartridge/: CartridgeSaveManager.hpp  GameBoyCartridge.hpp
cores/gameboy/decode/: gb_decoder.cpp  gb_decoder.hpp  gb_interpreter.cpp  gb_interpreter.hpp  gb_opcode_decode.hpp
cores/gameboy/video/: GameBoyVisualDebugAdapter.hpp  GameBoyVisualExtractor.hpp
cores/gamegear/: GameGearCartridge.cpp  GameGearCartridge.hpp  GameGearInput.cpp  GameGearInput.hpp  GameGearMachine.cpp  GameGearMachine.hpp  GameGearMapper.hpp  GameGearMapperFactory.cpp  GameGearMapperFactory.hpp  GameGearMemoryMap.cpp  GameGearMemoryMap.hpp  GameGearPSG.cpp  GameGearPSG.hpp  GameGearSaveManager.hpp  GameGearVDP.cpp  GameGearVDP.hpp  Z80Interpreter.cpp  Z80Interpreter.hpp  mapper_table.tsv
cores/gamegear/mappers/: CodemastersMapper.hpp  Sega3155208Mapper.hpp  Sega3155235Mapper.hpp  Sega3155365Mapper.hpp
docs/: audio_plugin_subsystem_spec.md  debugger_instrumentation_plugin_subsystem_spec.md  input_plugin_subsystem_spec.md  plugin_blueprint.md  scripting_plugin_subsystem_spec.md  timing_jitter_fix_brief.md  timing_service_blueprint.md  timing_sleep_quantum_patch_plan.md  video_plugin_subsystem_spec.md
docs/superpowers/specs/: 2026-04-12-audio-service-design.md
docs/texture-pack/: README.md  author-workflow.md  design.md  spec-gap-assessment.md  walkthrough.md
docs/texture-pack/sample-pack/: README.md  pack.json
emulator/: AudioKpiStatus.hpp  EmulatorConfig.cpp  EmulatorConfig.hpp  EmulatorHost.cpp  EmulatorHost.hpp  MachineFactory.cpp  MachineFactory.hpp
inst_cycle/: microcode.hpp  microcodeFunc.hpp  opcode.hpp
inst_cycle/execute/: argument_tuple.hpp  executionBlock.hpp  return_tuple.hpp
inst_cycle/executor/: BlockScript.hpp  Executor.hpp  PluginContract.hpp  PluginExecutor.hpp
inst_cycle/fetch/: fetchBlock.hpp
inst_cycle/fetch/templ/: fetchBlock.impl.hpp
machine/: AudioPipeline.hpp  AudioService.hpp  BackgroundTaskService.hpp  Bus.hpp  CPU.hpp  DebugSnapshotService.cpp  DebugSnapshotService.hpp  DebugSnapshotTypes.hpp  ImageDecoder.cpp  ImageDecoder.hpp  ImageDecoderTypes.hpp  InputService.hpp  InputTypes.hpp  Machine.hpp  MachineLifecycleCoordinator.cpp  MachineLifecycleCoordinator.hpp  MemoryMap.hpp  PngDecode.cpp  PngDecode.hpp  RegisterId.hpp  RomImage.hpp  RuntimeContext.hpp  TimingService.cpp  TimingService.hpp  VideoDebugModel.hpp  VideoService.hpp  VisualCaptureWriter.cpp  VisualCaptureWriter.hpp  VisualDebugAdapter.hpp  VisualOverrideService.cpp  VisualOverrideService.hpp  VisualPackLimits.hpp  VisualPackManifest.cpp  VisualPackManifest.hpp  VisualTypes.hpp
machine/plugins/: AudioEngine.hpp  AudioOutput.hpp  IoPlugin.hpp  LoggingPlugins.hpp  PluginManager.hpp  SdlAudioResampler.hpp  SdlFrontendPlugin.hpp  SdlFrontendPluginLoader.cpp  SdlFrontendPluginLoader.hpp
machine/plugins/audio_output/: DummyAudioOutput.cpp  DummyAudioOutput.hpp  FileAudioOutput.cpp  FileAudioOutput.hpp
machine/plugins/input/: InputCapabilities.hpp  InputEngine.hpp  InputPlugin.hpp
machine/plugins/sdl_frontend/: SdlAudioOutput.cpp  SdlAudioOutput.hpp  SdlFrontendPlugin.cpp
machine/plugins/video/: VideoCapabilities.hpp  VideoEngine.hpp  VideoFrame.hpp  VideoPlugin.hpp
machine/plugins/video/adapters/: HeadlessFrameDumper.cpp  HeadlessFrameDumper.hpp  SdlVideoPresenter.cpp  SdlVideoPresenter.hpp
memory/: IMemory.hpp  MemoryMap.hpp  MemoryPool.hpp  MemorySnapshot.hpp  MemoryStorage.hpp  reg_base.hpp
memory/MemorySnapshot/: MemorySnapshot.hpp
memory/MemorySnapshot/SnapshotStorage/: SnapshotStorage.h
memory/MemorySnapshot/SnapshotStorage/impl/: SnapshotStorage.impl.hpp
memory/MemorySnapshot/templ/: MemorySnapshot.impl.hpp
memory/templ/: MemoryMap.impl.hpp  MemoryPool.impl.hpp  MemorySnapshot.impl.hpp  MemoryStorage.impl.hpp  RegisterFile.impl.hpp  RegisterInfo.impl.hpp  reg_base.impl.hpp  reg_uint16.impl.hpp
templ/: IMicrocode.impl.hpp  IOpcode.impl.hpp  MemoryPool.impl.hpp  executionBlock.impl.hpp  inst_cycle.impl.hpp  reg_base.hpp  reg_base.impl.hpp  reg_uint16.hpp
tests/: perf_gamegear_vdp_bench.cpp  probe_gamegear_wait_loop.cpp  smoke_apu_audio.cpp  smoke_audio_engine.cpp  smoke_audio_kpi_status.cpp  smoke_audio_pipeline.cpp  smoke_audio_service.cpp  smoke_background_task_service.cpp  smoke_debug_snapshot_sdl_plugin.cpp  smoke_debug_snapshot_service.cpp  smoke_dummy_audio_output.cpp  smoke_ei_reti.cpp  smoke_emulator_config.cpp  smoke_emulator_host.cpp  smoke_executor.cpp  smoke_file_audio_output.cpp  smoke_gameboy_cartridge_save.cpp  smoke_gamegear_3155235_reset.cpp  smoke_gamegear_audio.cpp  smoke_gamegear_banking.cpp  smoke_gamegear_bios.cpp  smoke_gamegear_cartridge.cpp  smoke_gamegear_core.cpp  smoke_gamegear_machine_banking.cpp  smoke_gamegear_mapper_ram_mirror.cpp  smoke_gamegear_mapper_subsystem.cpp  smoke_gamegear_mapper_table.cpp  smoke_gamegear_psg_subsystem.cpp  smoke_gamegear_rom_baseline.cpp  smoke_gamegear_save_persistence.cpp  smoke_gamegear_system_ports.cpp  smoke_gamegear_vblank_irq.cpp  smoke_gamegear_vdp_cache.cpp  smoke_gamegear_vdp_cram.cpp  smoke_gamegear_vdp_fidelity.cpp  smoke_gamegear_vdp_hoist.cpp  smoke_gamegear_vdp_line_irq.cpp  smoke_gamegear_vdp_pattern_row.cpp  smoke_gamegear_vdp_priority.cpp  smoke_gamegear_vdp_simple_tile_run.cpp  (+50 more)
tools/: audio_kpi_harness.py
util/function/: arity.hpp  invoke_tuple.hpp  void_invocable.hpp
util/tuple/: Sub_tuple.hpp
