cmake_minimum_required(VERSION 3.10)

project(timeEmulator)

find_package(SDL2 QUIET)

if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Build type" FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release MinSizeRel RelWithDebInfo)
endif()

set (CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS ON)
set (CMAKE_CXX_STANDARD_REQUIRED True)
include_directories(. templ memory cores)
add_compile_options(-Wall -Wextra )
add_library(time-gameboy-interpreter-core
	cores/gameboy/decode/gb_decoder.cpp
	cores/gameboy/decode/gb_interpreter.cpp
	cores/gameboy/gameboy.cpp
)
add_library(time-sdl-frontend-loader
    machine/plugins/SdlFrontendPluginLoader.cpp
)
target_link_libraries(time-sdl-frontend-loader ${CMAKE_DL_LIBS})
set(BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL_VALUE 0)
add_library(time-sdl-audio-output STATIC
    machine/plugins/sdl_frontend/SdlAudioOutput.cpp
)
set_target_properties(time-sdl-audio-output PROPERTIES POSITION_INDEPENDENT_CODE ON)
add_library(time-sdl-frontend-plugin SHARED
    machine/plugins/sdl_frontend/SdlFrontendPlugin.cpp
)
add_executable(timeEmulator emulator.cpp)
target_link_libraries(timeEmulator time-gameboy-interpreter-core time-sdl-frontend-loader)
if (TARGET SDL2::SDL2)
    target_link_libraries(time-sdl-audio-output PRIVATE SDL2::SDL2)
    target_link_libraries(time-sdl-frontend-plugin PRIVATE SDL2::SDL2)
    set(BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL_VALUE 1)
elseif (SDL2_FOUND)
    target_include_directories(time-sdl-audio-output PRIVATE ${SDL2_INCLUDE_DIRS})
    target_link_libraries(time-sdl-audio-output PRIVATE ${SDL2_LIBRARIES})
    target_include_directories(time-sdl-frontend-plugin PRIVATE ${SDL2_INCLUDE_DIRS})
    target_link_libraries(time-sdl-frontend-plugin PRIVATE ${SDL2_LIBRARIES})
    set(BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL_VALUE 1)
endif()
target_compile_definitions(time-sdl-audio-output PRIVATE BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL=${BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL_VALUE})
target_compile_definitions(time-sdl-frontend-plugin PRIVATE BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL=${BMMQ_SDL_FRONTEND_COMPILED_WITH_SDL_VALUE})
target_link_libraries(time-sdl-frontend-plugin PRIVATE time-sdl-audio-output)

enable_testing()
add_executable(time-smoke-snapshot tests/smoke_snapshot.cpp)
add_test(NAME smoke_snapshot COMMAND time-smoke-snapshot)
add_executable(time-smoke-register-snapshot tests/smoke_register_snapshot.cpp)
add_test(NAME smoke_register_snapshot COMMAND time-smoke-register-snapshot)
add_executable(time-smoke-register-descriptors tests/smoke_register_descriptors.cpp)
add_test(NAME smoke_register_descriptors COMMAND time-smoke-register-descriptors)
add_executable(time-smoke-instruction-cycle tests/smoke_instruction_cycle.cpp)
target_link_libraries(time-smoke-instruction-cycle time-gameboy-interpreter-core)
add_test(NAME smoke_instruction_cycle COMMAND time-smoke-instruction-cycle)
add_executable(time-smoke-executor tests/smoke_executor.cpp)
target_link_libraries(time-smoke-executor time-gameboy-interpreter-core)
add_test(NAME smoke_executor COMMAND time-smoke-executor)
add_executable(time-smoke-plugin-executor tests/smoke_plugin_executor.cpp)
target_link_libraries(time-smoke-plugin-executor time-gameboy-interpreter-core)
add_test(NAME smoke_plugin_executor COMMAND time-smoke-plugin-executor)
add_executable(time-smoke-plugin-abi tests/smoke_plugin_abi.cpp)
target_link_libraries(time-smoke-plugin-abi time-gameboy-interpreter-core)
add_test(NAME smoke_plugin_abi COMMAND time-smoke-plugin-abi)
add_executable(time-smoke-plugin-io tests/smoke_plugin_io.cpp)
target_link_libraries(time-smoke-plugin-io time-gameboy-interpreter-core)
add_test(NAME smoke_plugin_io COMMAND time-smoke-plugin-io)
add_executable(time-smoke-sdl-frontend-plugin tests/smoke_sdl_frontend_plugin.cpp)
target_link_libraries(time-smoke-sdl-frontend-plugin time-gameboy-interpreter-core time-sdl-frontend-loader)
add_test(NAME smoke_sdl_frontend_plugin COMMAND time-smoke-sdl-frontend-plugin)
add_executable(time-smoke-sdl-audio-transport tests/smoke_sdl_audio_transport.cpp)
target_link_libraries(time-smoke-sdl-audio-transport time-gameboy-interpreter-core time-sdl-frontend-loader)
add_test(NAME smoke_sdl_audio_transport COMMAND time-smoke-sdl-audio-transport)
add_executable(time-smoke-sdl-audio-resampler tests/smoke_sdl_audio_resampler.cpp)
target_link_libraries(time-smoke-sdl-audio-resampler time-gameboy-interpreter-core)
add_test(NAME smoke_sdl_audio_resampler COMMAND time-smoke-sdl-audio-resampler)
add_executable(time-smoke-audio-engine tests/smoke_audio_engine.cpp)
target_link_libraries(time-smoke-audio-engine time-gameboy-interpreter-core)
add_test(NAME smoke_audio_engine COMMAND time-smoke-audio-engine)
add_executable(time-smoke-sdl-audio-output-backend tests/smoke_sdl_audio_output_backend.cpp)
target_link_libraries(time-smoke-sdl-audio-output-backend time-gameboy-interpreter-core time-sdl-audio-output)
add_test(NAME smoke_sdl_audio_output_backend COMMAND time-smoke-sdl-audio-output-backend)
add_executable(time-smoke-sdl-audio-resampling-integration tests/smoke_sdl_audio_resampling_integration.cpp)
target_link_libraries(time-smoke-sdl-audio-resampling-integration time-gameboy-interpreter-core time-sdl-frontend-loader)
add_test(NAME smoke_sdl_audio_resampling_integration COMMAND time-smoke-sdl-audio-resampling-integration)
add_executable(time-smoke-apu-audio tests/smoke_apu_audio.cpp)
target_link_libraries(time-smoke-apu-audio time-gameboy-interpreter-core)
add_test(NAME smoke_apu_audio COMMAND time-smoke-apu-audio)
add_executable(time-smoke-machine-boot tests/smoke_machine_boot.cpp)
target_link_libraries(time-smoke-machine-boot time-gameboy-interpreter-core)
add_test(NAME smoke_machine_boot COMMAND time-smoke-machine-boot)
add_executable(time-smoke-memory-map tests/smoke_memory_map.cpp)
target_link_libraries(time-smoke-memory-map time-gameboy-interpreter-core)
add_test(NAME smoke_memory_map COMMAND time-smoke-memory-map)
add_executable(time-smoke-runtime-context tests/smoke_runtime_context.cpp)
target_link_libraries(time-smoke-runtime-context time-gameboy-interpreter-core)
add_test(NAME smoke_runtime_context COMMAND time-smoke-runtime-context)
add_executable(time-smoke-opcode-table tests/smoke_opcode_table.cpp)
target_link_libraries(time-smoke-opcode-table time-gameboy-interpreter-core)
add_test(NAME smoke_opcode_table COMMAND time-smoke-opcode-table)
add_executable(time-smoke-interpreter-math-i8 tests/smoke_interpreter_math_i8.cpp)
target_link_libraries(time-smoke-interpreter-math-i8 time-gameboy-interpreter-core)
add_test(NAME smoke_interpreter_math_i8 COMMAND time-smoke-interpreter-math-i8)
add_executable(time-smoke-trace-executor tests/smoke_trace_executor.cpp)
target_link_libraries(time-smoke-trace-executor time-gameboy-interpreter-core)
add_test(NAME smoke_trace_executor COMMAND time-smoke-trace-executor)
